--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,11 @@ commands:
       - run:
           name: Install Node.js 13
           command: |
-            docker run --rm -v $(pwd):/app -w /app node:13.8-alpine sh -c "apk add --no-cache git && npm install"
+            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+            nvm install 13.8
             node -v
 
   install_ansible:
