--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,12 +320,14 @@ jobs:
           name: Install dependencies
           command: |
             # your code here
+            echo "https://dl-cdn.alpinelinux.org/alpine/v3.14/main" > /etc/apk/repositories
+            echo "https://dl-cdn.alpinelinux.org/alpine/v3.14/community" >> /etc/apk/repositories
             apk add --update --no-cache tar gzip curl aws-cli
+            apk update
             apk del nodejs
             apk add nodejs=13.8.0-r0
-            node -v
             apk add npm
-            npm -v
+
       - run:
           name: Deploy backend
           command: |
