--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,13 +320,11 @@ jobs:
           name: Install dependencies
           command: |
             # your code here
-            echo "https://dl-cdn.alpinelinux.org/alpine/v3.14/main" > /etc/apk/repositories
-            echo "https://dl-cdn.alpinelinux.org/alpine/v3.14/community" >> /etc/apk/repositories
-            apk update
-            apk del libffi-3.3-r2
-            apk add libffi=3.4.4-r0
+            apk add --update --no-cache tar gzip curl ansible aws-cli
             apk add nodejs=13.8.0-r0
+            node -v
             apk add npm
+            npm -v
 
       - run:
           name: Deploy backend
