--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,10 +1,10 @@
 ---
-- name: Configuration play
+- name: "configuration play." 
   hosts: web
   user: ubuntu
   become: true
   become_method: sudo
-  become_user: root
+  become_user: root  
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
@@ -12,21 +12,20 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    - name: Wait 600 seconds for target connection to become reachable/usable
-      # Your code here
+    - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
         timeout: 600
 
-    - name: Install python for Ansible
-      # Your code here
+    - name: "install python for Ansible."
       become: true
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
       changed_when: false
 
+  # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
     - ENVIRONMENT: production
     - NODE_ENV: production
-    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"  
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
     - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
     - TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
@@ -37,6 +36,5 @@
     - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
 
   roles:
-    # Your code here
     - configure-server
     - configure-prometheus-node-exporter
