--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,33 @@
 version: 2.1
 
+# orbs:
+#   slack: circleci/slack@4.10.1
+
 commands:
   destroy-environment:
-    description: Destroy front-end and back-end cloudformation stacks.
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      # Add parameter here
       Workflow_ID:
-        default: ${CIRCLE_WORKFLOW_ID:0:7}
         type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code here
-            echo "Destroying environment: << parameters.Workflow_ID >> "            
-            aws s3 rm "s3://udapeople-<<parameters.Workflow_ID>>" --recursive
-            aws cloudformation delete-stack --stack-name "udapeople-backend-<< parameters.Workflow_ID >>"
-            aws cloudformation delete-stack --stack-name "udapeople-frontend-<< parameters.Workflow_ID >>"
+            aws cloudformation delete-stack --stack-name udapeople-backend-<< parameters.Workflow_ID >>
+            aws s3 rm s3://udapeople-<<parameters.Workflow_ID>> --recursive
+            aws cloudformation delete-stack --stack-name udapeople-frontend-<< parameters.Workflow_ID >>
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
-      # Add parameter here
       Workflow_ID:
         type: string
         default: ${CIRCLE_WORKFLOW_ID:0:7}
     steps:
       - run:
           name: Revert migrations
-          # Add when this will run
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
@@ -38,11 +36,17 @@ commands:
             if(( $SUCCESS == 1 )); 
             then
               cd ~/project/backend
-              npm i
-            #  Add revert code here. You can find this in the Getting Started section.
+              npm install
               npm run migration:revert
             fi
-            
+  
+  # slack_notify:
+  #   steps:
+  #     - slack/notify:
+  #         channel: devops
+  #         event: fail
+  #         template: basic_fail_1
+
 jobs:
   build-frontend:
     docker:
@@ -54,13 +58,13 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            # Your code here
             cd frontend
-            npm i
+            npm install
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
+
   build-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -71,99 +75,83 @@ jobs:
       - run:
           name: Back-end build
           command: |
-            # Your code here
             cd backend
-            npm i
+            npm install
             npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+
   test-frontend:
     docker:
-      # Docker image here
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
       - checkout
-      # Restore from cache
       - restore_cache:
           keys: [frontend-build]
-      # Your job code here
       - run:
-          name: Run frontend test
+          name: Frontend Testing
           command: |
             cd frontend
-            npm i
-            npm run test
+            npm install
+            npm test
+      # - slack_notify
+
   test-backend:
     docker:
-      # Docker image here
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
       - checkout
-      # Restore from cache
       - restore_cache:
           keys: [backend-build]
-      # Your job code here
       - run:
-          name: Run backend test
+          name: Backend Testing
           command: |
             cd backend
-            npm i
-            npm run test
+            npm install
+            npm test
+      # - slack_notify
+
   scan-frontend:
     docker:
-      # Docker image here
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
       - checkout
-      # Restore from cache
       - restore_cache:
           keys: [frontend-build]
-      # Your job code here
       - run:
-          name: Frontend Scan
+          name: Frontend Scaning
           command: |
             cd frontend
-            npm i
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
+            npm install
+            npm audit fix --force --audit-level=critical
+            # npm audit --audit-level=critical
+
   scan-backend:
     docker:
-      # Docker image here
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
       - checkout
-      # Restore from cache
       - restore_cache:
           keys: [backend-build]
-      # Your job code here
       - run:
-          name: Backend Scan
+          name: Backend Scaning
           command: |
             cd backend
-            npm i
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
+            npm install
+            npm audit fix --force --audit-level=critical
+            npm audit fix --force
             npm audit --audit-level=critical
-            echo "Node.js version: $NODE_VERSION"
+
   deploy-infrastructure:
     docker:
-      # Docker image here that supports AWS CLI
       - image: amazon/aws-cli
     steps:
-      # Checkout code from git
       - checkout
-      # Install tar/gzip
       - run:
-          name: Install tar/gzip utility
+          name: Install tar
           command: |
-            yum -y install tar
-            yum -y install gzip
+            yum install tar gzip -y
       - run:
           name: Ensure back-end infrastructure exists
           command: |
@@ -183,44 +171,34 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            # Your code here
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
             cat .circleci/ansible/inventory.txt
-            echo "Node.js version: $NODE_VERSION"
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure
-      - destroy-environment     
+      - destroy-environment
+  
   configure-infrastructure:
     docker:
-      # Docker image here that supports Ansible
       - image: python:3.8-alpine
     steps:
-      # Checkout code from git
       - checkout
-      # Add ssh keys with fingerprint
       - add_ssh_keys:
-          fingerprints: ["ba:cf:41:ab:3d:0e:13:b7:52:e7:f9:bb:69:ab:43:70"] # You can get this ID in the section where you registered the SSH Key
-      # attach workspace
-      - attach_workspace:
-          at: ~/
-      # Install dependencies
+          fingerprints: ["ba:cf:41:ab:3d:0e:13:b7:52:e7:f9:bb:69:ab:43:70"]
       - run:
           name: Install dependencies
           command: |
-            # Your code here
             apk add --update --no-cache tar gzip ansible aws-cli
-      # Configure server
+      - attach_workspace:
+          at: ~/
       - run:
           name: Configure server
           command: |
-            export ANSIBLE_HOST_KEY_CHECKING=False
             echo ENVIRONMENT=production >> "backend/.env"
             echo NODE_ENV=production >> "backend/.env"
             echo VERSION=1.0 >> "backend/.env"
@@ -236,60 +214,46 @@ jobs:
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
-            echo "Node.js version: $NODE_VERSION"
-      # Here's where you will add some code to rollback on failure
       - destroy-environment
+      # - slack_notify
+
   run-migrations:
     docker:
-      # Docker image here that supports NodeJS
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
       - checkout
       - run:
           name: Run migrations
           command: |
-            # Your code here
             cd backend
-            npm i
+            npm install
             npm run migrations > migrations_dump.txt
-             cat migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
           command: |
-            # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
               curl --insecure https://kvdb.io/8GifJ5EvH4RdX6inkhGjWh/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              echo "Inserted to kvdb"
             fi
-     # Here's where you will add some code to rollback on failure 
       - destroy-environment
       # - revert-migrations
+      # - slack_notify
+
   deploy-frontend:
     docker:
-      # Docker image here that supports AWS CLI
       - image: python:3.8-alpine
     steps:
-      # Checkout code from git
       - checkout
-      # attach workspace
-      - attach_workspace:
-          at: ~/      
-      # Install dependencies
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache tar gzip curl aws-cli
-            apk add nodejs=13.8.0-r0
-            node -v
-            apk add npm
-            npm -v
+            apk add --update --no-cache tar gzip curl nodejs npm aws-cli
       - restore_cache:
           keys: [frontend-build]
       - run:
           name: Get backend url
           command: |
-            # your code here
             export BACKEND_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
@@ -301,119 +265,151 @@ jobs:
       - run:
           name: Deploy frontend objects
           command: |
-            # your code here
             cd frontend
-            npm i
+            npm install
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-            echo "Node.js version: $NODE_VERSION"
-      # Here's where you will add some code to rollback on failure
       - destroy-environment
-      - revert-migrations 
+      - revert-migrations
+      # - slack_notify
+
   deploy-backend:
     docker:
-      # Docker image here that supports Ansible
       - image: python:3.8-alpine
     steps:
-      # Checkout code from git
       - checkout
-      # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints: ["ba:cf:41:ab:3d:0e:13:b7:52:e7:f9:bb:69:ab:43:70"]
       - restore_cache:
           keys: [backend-build]
-      # attach workspace
       - attach_workspace:
           at: ~/
       - run:
           name: Install dependencies
           command: |
-            # your code here
-            apk add --update --no-cache tar gzip curl ansible aws-cli
-            apk add nodejs=13.8.0-r0
-            node -v
-            apk add npm
-            npm -v
-
+            apk add --update --no-cache tar gzip curl nodejs npm ansible aws-cli
       - run:
           name: Deploy backend
           command: |
-            # your code here
             cd backend
             npm i
             npm run build
-            ls
-            pwd
             cd ..
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
+            # cp artifact.tar.gz .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             echo "Contents of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-            echo "Node.js version: $NODE_VERSION"
-      # Here's where you will add some code to rollback on failure
       - destroy-environment
       - revert-migrations
+      # - slack_notify
 
-#   smoke-test:
-#     docker:
-#       # Lightweight Docker image 
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Get backend url
-#           command: |
-#             # your code here
-#       - run:
-#           name: Backend smoke test.
-#           command: |
-#             # your code here
-#       - run:
-#           name: Frontend smoke test.
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+  # smoke-test:
+  #   docker:
+  #     - image: python:3.8-alpine
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update --no-cache curl aws-cli
+  #     - run:
+  #         name: Backend smoke test.
+  #         command: |
+  #           export BACKEND_IP=$(aws ec2 describe-instances \
+  #             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
+  #             --output text)
+  #           echo $BACKEND_IP
+  #           export API_URL="http://${BACKEND_IP}:3030"
+  #           echo ${API_URL}
+  #           sleep 60
+  #           if curl ${API_URL}/api/status | grep "ok"
+  #           then
+  #               return 0
+  #           else
+  #               return 1
+  #           fi
+  #     - run:
+  #         name: Frontend smoke test.
+  #         command: |
+  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+  #           echo "FE_URL: ${URL}" 
+  #           if curl -s ${URL} | grep "Welcome"
+  #           then
+  #               # Change this to 0 after the job fails
+  #             return 0
+  #           else
+  #             return 1
+  #           fi
+  #     - destroy-environment
+  #     - revert-migrations
 
-#   cloudfront-update:
-#     docker:
-#       # Docker image here that supports AWS CLI
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Update cloudfront distribution
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+  # cloudfront-update:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           yum install -y tar gzip
+  #     - run:
+  #         name: Update cloudfront distribution
+  #         command: |
+  #           export OldWorkflowID=$(aws cloudformation \
+  #               list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+  #               --no-paginate --output text)
+  #           echo ${OldWorkflowID} >> ~/OldWorkflowID.txt
+  #           cat ~/OldWorkflowID.txt
+  #           aws cloudformation deploy \
+  #             --template-file .circleci/files/cloudfront.yml \
+  #             --stack-name InitialStack \
+  #             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+  #             --tags project=udapeople
+  #           echo OldWorkflowID: "${OldWorkflowID}"
+  #           echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+  #     - persist_to_workspace:
+  #         root: ~/
+  #         paths:
+  #           - OldWorkflowID.txt
+  #     - destroy-environment
+  #     - revert-migrations
 
-# cleanup:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Get old stack workflow id
-#           command: |
-#             # your code here
-#             export OldWorkflowID="the id here"
-#             export STACKS=[] #put the list of stacks here
-#       - run:
-#           name: Remove old stacks and files
-#           command: |
-#             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#             then
-#               # your code here
-#             fi
+  # cleanup:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           yum install -y tar gzip
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run:
+  #         name: Cleanup
+  #         command: |
+  #           # Fetch the Old workflow ID
+  #           cat ~/OldWorkflowID.txt
+  #           OldWorkflowID=$(cat ~/OldWorkflowID.txt)
+  #           echo OldWorkflowID: ${OldWorkflowID}
+  #           echo CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}
             
+  #           if [[ "${OldWorkflowID}" != "${CIRCLE_WORKFLOW_ID:0:7}"  ]]
+  #           then
+  #             echo "------------------ Start To Clean ---------------"
+  #             aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+  #             aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+  #             aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+  #             echo "------------------ Clean Done ---------------"
+  #           else
+  #             echo "------------------ Cannot Cleanup ---------------"
+  #           fi
+  #     # - slack_notify
 
 workflows:
   default:
@@ -430,9 +426,9 @@ workflows:
           requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters:
-      #       branches:
-      #         only: [test-feature-branch]
+          # filters:
+          #   branches:
+          #     only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
