--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,9 +123,10 @@ jobs:
           name: Frontend Scaning
           command: |
             cd frontend
-            npm install
-            npm audit fix --force --audit-level=critical
-            # npm audit --audit-level=critical
+            npm i
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -138,9 +139,9 @@ jobs:
           name: Backend Scaning
           command: |
             cd backend
-            npm install
-            npm audit fix --force --audit-level=critical
-            npm audit fix --force
+            npm i
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
   deploy-infrastructure:
