--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: "configuration play." 
   hosts: web
   user: ubuntu
@@ -14,6 +15,7 @@
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
+        delay: 300
         timeout: 600
 
     - name: "install python for Ansible."
@@ -21,20 +23,17 @@
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
       changed_when: false
 
-  # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
-    - ENVIRONMENT: production
-    - NODE_ENV: production
-    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"  
-    - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
-    - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-    - TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-    - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
+    - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+    - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+    - TYPEORM_PORT: 5432
+    - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+    - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+    - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
     - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
     - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
-
+  
   roles:
     - configure-server
     - configure-prometheus-node-exporter
