--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -33,17 +33,22 @@ Resources:
           FromPort: 9093
           ToPort: 9093
           CidrIp: 0.0.0.0/0
-
+     
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: suppercloud # If you use another key pair name, you should change this value to match.
-      # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
-      # Ubuntu 18 or higher works fine
-      ImageId: ami-0aa2b7722dc1b5612
+      KeyName: suppercloud
+      ImageId: ami-0aa2b7722dc1b5612 
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+
+  AddElasticIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+      InstanceId: !Ref EC2Instance 
+        
