--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,12 +1,24 @@
 ---
-- name: Install Dependencies
+- name: create directory for backend
+  become: yes
+  file:
+      path: ~/backend
+      state: directory
+      mode: 0755
+
+- name: "upgrade packages."
+  become: true
+  apt:
+    upgrade: "yes"
+
+- name: "install dependencies."
   become: true
   apt:
     name: ["nodejs", "npm"]
-    state: latest
     update_cache: yes
 
-- name: Install pm2
+
+- name: "install pm2"
   become: true
   npm:
     name: pm2
@@ -14,32 +26,34 @@
     production: yes
     state: present
 
-- name: Creates directory
-  file:
-    path: ~/backend
-    state: directory
-    mode: 0755
-
-- name: Extract artifact.tar.gz into ~/backend
-  ansible.builtin.unarchive:
+- name: copy backend files
+  become: yes
+  copy:
     src: ~/project/artifact.tar.gz
-    dest: ~/backend
+    dest: ~/backend/artifact.tar.gz
 
-- name: install npm & switch to 13.8.0 to build
-  become: true
+- name: unzip backend files
+  become: yes
   shell: |
-    cd /home/ubuntu/backend
-    npm install -g n
-    n 13.8.0
-    chown -R ubuntu:ubuntu /home/ubuntu/backend
-
-- name: build
-  shell: |
-    cd /home/ubuntu/backend
-    npm install
-    npm run build
+    cd ~/backend
+    tar -xvf artifact.tar.gz
+    rm -f artifact.tar.gz
     
-- name: start pm2
+- name: start backend
+  become: yes
   shell: |
-    cd /home/ubuntu/backend    
-    pm2 start npm --name backend -- start
+    cd ~/backend
+    # npm install
+    pm2 start npm -- run start
+    # cd dist
+    # pm2 start -f main.js
+  environment:
+    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
+    TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+    TYPEORM_PORT: 5432
+    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
+    TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
+    TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
