--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,8 +119,9 @@ jobs:
            name: Run scan frontend
            command: |
             cd frontend
-            npm install
-            # npm install oauth-sign@^0.9.0
+            npm i
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
   scan-backend:
     docker:
@@ -137,8 +138,9 @@ jobs:
            name: Run scan backend
            command: |
             cd backend
-            npm install
-            # npm install oauth-sign@^0.9.0
+            npm i
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
 #   deploy-infrastructure:
