--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -9,6 +9,11 @@
   apt:
     upgrade: yes
 
+- name: "remove dependencies that are no longer required"
+  become: true
+  apt:
+    autoremove: yes
+    
 - name: Install Node.js and npm
   become: true
   apt:
