--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,11 +1,23 @@
 ---
+- name: copy backend files
+  become: true
+  copy:
+    src: ~/project/artifact.tar.gz
+    dest: /home/ubuntu/artifact.tar.gz
 
-- name: Upgrade APT packages
+- name: extract backend files
+  become: true
+  shell: |
+    cd /home/ubuntu
+    tar -vxf artifact.tar.gz
+    rm artifact.tar.gz
+
+- name: Update APT packages
   become: true
   apt:
-    upgrade: yes
+    update_cache: yes
 
-- name: Install Node.js and npm
+- name: Install nodejs and npm
   become: true
   apt:
     name: ["nodejs", "npm"]
@@ -19,33 +31,18 @@
     global: yes
     production: yes
     state: present
- 
-- name: Create directory for backend
-  become: true
-  file:
-      path: ~/backend
-      state: directory
-      mode: 0755 
 
-- name: Copy backend files
-  become: true
-  copy:
-    src: ~/project/artifact.tar.gz
-    dest: ~/backend/artifact.tar.gz
-
-- name: Extract backend files
+- name: Install dependencies
   become: true
   shell: |
-    cd ~/backend
-    tar -xvf artifact.tar.gz
-    rm -f artifact.tar.gz
-    
+    cd /home/ubuntu
+    npm install
+
 - name: Start backend
   become: true
-  shell: |
-    cd ~/backend
-    pm2 start npm -- run start
   environment:
+    ENVIRONMENT: production
+    NODE_ENV: production
     TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
     TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
@@ -55,3 +52,8 @@
     TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
     TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
     TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
+  shell: |
+    cd /home/ubuntu/dist
+    pm2 stop default
+    pm2 start npm -- start
+    pm2 ls
