--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,14 +287,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt-get update && \
-            sudo apt-get install python3-pip -y && \
-            sudo pip3 install ansible
-            sudo apt install curl
-            sudo apt install unzip
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+            apk add --update --no-cache tar gzip curl aws-cli
       - restore_cache:
           keys: [frontend-build]
       - run:
@@ -343,14 +336,7 @@ jobs:
           name: Install dependencies
           command: |
             # your code here
-            sudo apt-get update && \
-            sudo apt-get install python3-pip -y && \
-            sudo pip3 install ansible
-            sudo apt install curl
-            sudo apt install unzip
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+            apk add --update --no-cache tar gzip curl ansible aws-cli
 
       - run:
           name: Deploy backend
